--- a/src/modules/spot/components/Chart/SpotChart.module.scss
+++ b/src/modules/spot/components/Chart/SpotChart.module.scss
@@ -6,6 +6,18 @@
   border: 0;
   border-radius: 0;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.chartBody {
+  position: relative;
+  flex: 1;
+  width: 100%;
+  min-height: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
